--- a/index.html
+++ b/index.html
@@ -12,9 +12,24 @@
 	</div>
 		<div class="photo">
 			<p>Denis Pozhar<br>
-				+375333174389
+				+375333174389<br>
+				pozharitskij.denis@gmail.com<br>
+				<a href="https://github.com/Pozharitskiy">github</a>
 			</p>
 			<img src="img/photo.jpg">
+		</div>
+		<div class="summary"> <p>ABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJ<br>KLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRST<br>UVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZ</p></div>
+		<div class="skills">
+			<p>HTML5<br>
+			CSS3<br>
+			Bootstrap<br>
+			Nothing</p>
+		</div>
+		<div class="xp">
+			<p>a little bit freelance</p>
+		</div>
+		<div class="education">
+			<p>Student of the Academy of Public Administration under the Aegis of the president of the Republic of Belarus</p>
 		</div>
 	</div>
 </body>
