--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 			<p>a little bit freelance</p>
 		</div>
 		<div class="education">
-			<p>Student of the Academy of Public Administration under the Aegis of the president of the Republic of Belarus</p>
+			<p>Student of the Academy of Public Administration under the Aegis of the President of the Republic of Belarus</p>
+		</div>
+		<div class="english"> 
+			<p>English level is B1</p>
 		</div>
 	</div>
 </body>
