--- a/index.html
+++ b/index.html
@@ -14,11 +14,18 @@
 			<p>Denis Pozhar<br>
 				+375333174389<br>
 				pozharitskij.denis@gmail.com<br>
-				<a href="https://github.com/Pozharitskiy">github</a>
+				 <a href="https://github.com/Pozharitskiy" target="_blank"><img src="img/img.png" ></a>
 			</p>
 			<img src="img/photo.jpg">
 		</div>
-		<div class="summary"> <p>ABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJ<br>KLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRST<br>UVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZABCDEFGHIJKLMNOPQRSTUVWXYZ</p></div>
+		<div class="menu">
+			<p>Summary<br><br><br>
+			Skills<br><br><br>
+			Experience<br><br><br>
+			Education<br><br><br>
+			English-level</p>
+		</div>
+		<div class="summary"><p>There is a huge motivation and desire to learn everything new. A lot of free time to devote to studying a particular topic.</p></div>
 		<div class="skills">
 			<p>HTML5<br>
 			CSS3<br>
