--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
 <body>
 
 <div class="constructor">
-	<div class="nameofcv">
-		<p>Den's CV</p>
-	</div>
 		<div class="photo">
 			<p>Denis Pozhar<br>
 				+375333174389<br>
@@ -27,10 +24,7 @@
 		</div>
 		<div class="summary"><p>There is a huge motivation and desire to learn everything new. A lot of free time to devote to studying a particular topic.</p></div>
 		<div class="skills">
-			<p>HTML5<br>
-			CSS3<br>
-			Bootstrap<br>
-			Nothing</p>
+			<p>HTML5|			CSS3|			Bootstrap|			(maybe) JS Junior<br> (You can find examples of my code in my github account) </p>
 		</div>
 		<div class="xp">
 			<p>a little bit freelance</p>
