--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<img src="img/photo.jpg">
 		</div>
 		<div class="menu">
-			<p>Summary<br><br><br>
+			<p>Summary<br><br><br><br>
 			Skills<br><br><br>
 			Experience<br><br><br>
 			Education<br><br><br>
