--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="eng">
+  <head>
+    <meta charset="utf-8">
+    <head>
 	<title>POZHAR</title>
 	<link rel="stylesheet" type="text/css" href="style/style.css">
 </head>
